render-wasm/src/render/svg/tests/snapshots/render_wasm__render__svg__tests__exports_a_solid_rect.snap
---
source: src/render/svg/mod.rs
expression: "render(&pool, id)"
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="80">
	<rect fill="red" width="100" height="80"/>
</svg>
